# fgtc-calc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
alembic/: env.py
alembic/versions/: 15ce799e639b_add_notes_to_build.py  17c1bdbc2667_initial_revision.py  3d90ef9b5138_add_operating_system_field.py  4fe4afe437ed_add_thunderbolt_to_port_types_add_.py  741f648bc25c_add_webcam_and_microphone_field_to_build.py  78626b32ca6d_add_browser_installed_field_to_mac_.py  a8de254ec7b2_add_gpu_info_pricing_to_database.py  acbc40d75e65_cascading_deletions_for_database_.py  b400ee8261de_add_year_mac_model_and_macos_version_to_.py  d9fae10ccf5a_add_port_types_counts_to_database_for_.py  e5bba161a2ee_save_pricing_model_parameters_to_.py  e5e39ef63c9d_add_retro_flag_to_mac_builds.py  e945f5ed5fd2_make_cpu_gpu_models_not_unique.py  ebb694d1d861_add_enum_values_for_storing_soldered_.py  ed69751cfdc2_implement_upgradable_fields_for_cpus_.py  f22ac61d4733_add_polymorphic_base_class_for_builds_.py  f69fa9eff813_add_geekbench_scores_to_cpu_and_gpu.py
app/: __main__.py  app.py  asgi.py  core.py  saq.py  static_controller.py
app/db/: enum.py  repository.py
app/ebay/: ebay_connection.py  exception.py  graphics_marketstudy.py  memory_marketstudy.py  price_estimator.py  processor_marketstudy.py  processor_price_estimator.py  storage_marketstudy.py  util.py
app/lib/: __init__.py  attrs.py  datetime.py  deps.py  math.py  rate_limit_middleware.py  util.py
app/passmark/: passmark_scraper.py  schema.py
app/price/: controller.py  dto.py
app/status/: controller.py  schema.py
app/templates/: base.html  index.html  navigation.html
notebooks/: isolation-forest.ipynb  memory-if.ipynb  passmark_cpu_specs.ipynb
src/: buildsheet.css  buildsheet.js  main.js  recentBuilds.js  status.js  style.css
templates/: base.html  index.html
(+31 files in other folders)
