[project]
name = "fgtc-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.8.2",
    "aiosqlite>=0.22.0",
    "ipykernel>=7.1.0",
    "litestar[standard]>=2.18.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
]
