[project]
name = "fgtc-calc"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.8.2",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.0",
    "aiostream>=0.7.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.3",
    "ebay-rest>=1.1.3",
    "ipykernel>=7.1.0",
    "litestar-saq>=0.6.4",
    "litestar-vite>=0.15.0",
    "litestar[standard]>=2.18.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "redis>=7.1.0",
    "requests-async>=0.2.4",
    "scipy>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
app = "app.__main__:run_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "setuptools"]

[tool.hatch.build.targets.wheel]
skip-excluded-dirs = false
ignore-vcs = true
packages = ["app", "templates"]
